--- a/zaplib/web/package.json
+++ b/zaplib/web/package.json
@@ -16,6 +16,7 @@
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
+        "git-revision-webpack-plugin": "^5.0.0",
         "jest": "^27.5.1",
         "jest-environment-jsdom": "^27.5.1",
         "node-self": "^1.0.0-d",
