--- a/zaplib/web/package.json
+++ b/zaplib/web/package.json
@@ -26,6 +26,7 @@
         "typescript": "^4.4.3",
         "webpack": "^5.57.1",
         "webpack-cli": "^4.8.0",
+        "webpack-filter-warnings-plugin": "^1.2.1",
         "worker-loader": "^3.0.8"
     },
     "scripts": {
