--- a/zaplib/docs/book.toml
+++ b/zaplib/docs/book.toml
@@ -4,3 +4,11 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Zaplib docs"
+
+[output.html]
+git-repository-url="https://github.com/Zaplib/zaplib"
+edit-url-template = "https://github.com/Zaplib/zaplib/edit/main/zaplib/docs/{path}"
+additional-css = ["theme/css/slack.css"]
+
+[output.html.print]
+enable = false
