Move all test_suite code under zaplib/web/test_suite
To make it a bit easier to understand what is going on.

Also added a note in the docs on how to test with CEF.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,5 +33,5 @@ members = [
     "zaplib/examples/tutorial_3d_rendering/step3",
     "zaplib/examples/tutorial_ui_components",
     "zaplib/examples/tutorial_ui_layout",
-    "zaplib/test_suite",
+    "zaplib/web/test_suite",
 ]
