Don’t use relative paths in Typscript
Per feedback

--- a/zaplib/web/tsconfig.json
+++ b/zaplib/web/tsconfig.json
@@ -8,7 +8,8 @@
             "ESNext.WeakRef"
         ],
         "target": "es6",
-        "strict": true
+        "strict": true,
+        "baseUrl": ".",
     },
     "sourceMap": true,
     "allowJs": true,
