--- a/zaplib/cargo-zaplib/Cargo.toml
+++ b/zaplib/cargo-zaplib/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/Zaplib/zaplib"
 description = "Cargo extensions for Zaplib"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-clap = { version = "3.0", features = ["derive"] }
+clap = "3.0.13"
 actix-web = { version = "4.0.0-rc.3", features=["openssl"] }
 log = "0.4.14"
 env_logger = "0.9.0"
