--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,3 +64,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: zaplib/scripts/ci/tests.sh
+  build_and_push_to_docker_hub:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: janpaul123
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - run: zaplib/scripts/docker_ci_build.sh && zaplib/scripts/docker_ci_push.sh
