Multiple Browserstack browsers
For now still just Chrome/Edge. But I did fix a bunch of issues related
to Firefox/Safari:
* These require HTTPS, so I brought that back in from
  `cargo zaplib serve --ssh`, with bs-local.com (which redirects to
  localhost).
* Use development build for better stack traces (source maps don’t seem
  to work in some cases).
* Small Safari fix for `self.Worker`.

--- a/zaplib/web/package.json
+++ b/zaplib/web/package.json
@@ -31,6 +31,7 @@
     },
     "scripts": {
         "build": "webpack --mode production",
+        "build-dev": "webpack --mode development",
         "watch": "webpack --watch --mode development",
         "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
     }
