--- a/zaplib/ci/Cargo.toml
+++ b/zaplib/ci/Cargo.toml
@@ -7,8 +7,14 @@ description = "Zaplib tools used in CI."
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 clap = "3.0.13"
-actix-web = { version = "4.0.0-rc.3" }
+actix-web = { version = "4.0.0-rc.3", features=["openssl"] }
 log = "0.4.14"
 env_logger = "0.9.0"
 actix-files = "0.6.0-beta.16"
 thirtyfour = "0.28.1"
+serde_json = { version = "1" }
+serde = { version = "1" }
+futures = "0.3.21"
+simple-error = "0.2.3"
+rcgen = "0.9.1"
+openssl = "0.10.38"
