--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,14 +54,38 @@ jobs:
       - uses: actions/checkout@v2
       - uses: Swatinem/rust-cache@v1
       - run: zaplib/scripts/ci/checks_for_all_targets_release.sh
-  debug_builds:
+  debug_builds_native:
     runs-on: ubuntu-latest
     container:
       image: janpaul123/zaplib-ci@sha256:84c43567c8bf613fa60fdb3c7708b983069906840544a9366db220bcc9ea787a
     steps:
       - uses: actions/checkout@v2
       - uses: Swatinem/rust-cache@v1
-      - run: zaplib/scripts/ci/debug_builds.sh
+      - run: zaplib/scripts/ci/debug_builds_native.sh
+  debug_builds_wasm:
+    runs-on: ubuntu-latest
+    container:
+      image: janpaul123/zaplib-ci@sha256:84c43567c8bf613fa60fdb3c7708b983069906840544a9366db220bcc9ea787a
+    steps:
+      - uses: actions/checkout@v2
+      - uses: Swatinem/rust-cache@v1
+      - run: zaplib/scripts/ci/debug_builds_wasm.sh
+  release_builds_native:
+    runs-on: ubuntu-latest
+    container:
+      image: janpaul123/zaplib-ci@sha256:84c43567c8bf613fa60fdb3c7708b983069906840544a9366db220bcc9ea787a
+    steps:
+      - uses: actions/checkout@v2
+      - uses: Swatinem/rust-cache@v1
+      - run: zaplib/scripts/ci/release_builds_native.sh
+  release_builds_wasm:
+    runs-on: ubuntu-latest
+    container:
+      image: janpaul123/zaplib-ci@sha256:84c43567c8bf613fa60fdb3c7708b983069906840544a9366db220bcc9ea787a
+    steps:
+      - uses: actions/checkout@v2
+      - uses: Swatinem/rust-cache@v1
+      - run: zaplib/scripts/ci/release_builds_wasm.sh
   lint:
     runs-on: ubuntu-latest
     container:
@@ -70,14 +94,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: Swatinem/rust-cache@v1
       - run: zaplib/scripts/ci/lint.sh
-  release_builds:
-    runs-on: ubuntu-latest
-    container:
-      image: janpaul123/zaplib-ci@sha256:84c43567c8bf613fa60fdb3c7708b983069906840544a9366db220bcc9ea787a
-    steps:
-      - uses: actions/checkout@v2
-      - uses: Swatinem/rust-cache@v1
-      - run: zaplib/scripts/ci/release_builds.sh
   rust_nightly_build:
     runs-on: ubuntu-latest
     container:
