--- a/zaplib/web/package.json
+++ b/zaplib/web/package.json
@@ -31,9 +31,10 @@
         "worker-loader": "^3.0.8"
     },
     "scripts": {
-        "build": "webpack --mode production",
-        "build-dev": "webpack --mode development",
-        "watch": "webpack --watch --mode development",
+        "build": "yarn build-copy && webpack --mode production",
+        "build-copy": "mkdir -p dist && cp entrypoints/* dist/",
+        "build-dev": "yarn build-copy && webpack --mode development",
+        "watch": "yarn build-copy && webpack --watch --mode development",
         "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
     }
 }
