--- a/zaplib/cargo-zaplib/Cargo.toml
+++ b/zaplib/cargo-zaplib/Cargo.toml
@@ -9,11 +9,9 @@ description = "Cargo extensions for Zaplib"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 clap = "3.0.13"
-actix-web = { version = "4.0.0-rc.3", features=["openssl"] }
-# Pinning transitive dependency - new builds of actix-http are currently broken upsteam
-actix-http = "=3.0.0-rc.3"
+actix-web = { version = "4.0.1", features=["openssl"] }
 log = "0.4.14"
 env_logger = "0.9.0"
-actix-files = "0.6.0-beta.16"
+actix-files = "0.6.0"
 rcgen = "0.9.1"
 openssl = "0.10.38"
