--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,7 @@ jobs:
       - run: zaplib/scripts/ci/build_web_ci.sh
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+    timeout-minutes: 20 # should only be triggered if there are unclosed handles in the Jest tests
   browser_tests:
     runs-on: ubuntu-latest
     container:
