--- a/zaplib/web/tsconfig.json
+++ b/zaplib/web/tsconfig.json
@@ -1,6 +1,4 @@
 {
-    "outDir": "./dist/",
-    "noImplicitAny": true,
     "compilerOptions": {
         "module": "es2020",
         "lib": [
@@ -10,8 +8,10 @@
         "target": "es6",
         "strict": true,
         "baseUrl": ".",
+        "declaration": true,
+        "noImplicitAny": true,
+        "outDir": "./dist/",
+        "sourceMap": true,   
+        "moduleResolution": "node"
     },
-    "sourceMap": true,
-    "allowJs": true,
-    "moduleResolution": "node"
 }
