add Typescript info to docs

--- a/zaplib/web/package.json
+++ b/zaplib/web/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.7",
     "license": "MIT",
     "main": "dist/zaplib_runtime.js",
+    "types:" : "dist/zaplib_runtime.d.ts",
     "files": [
         "dist"
     ],
