Minor followup on example_image
Some followup on https://github.com/Zaplib/zaplib/pull/159:
* Add a few TODOs for new tickets
* Flip the images so they render the right side up in wasm
* Add screenshot tests

--- a/zaplib/examples/example_image/Cargo.toml
+++ b/zaplib/examples/example_image/Cargo.toml
@@ -6,4 +6,5 @@ publish = false
 
 [dependencies]
 zaplib = { path="../../main" }
+# TODO(JP): replace with Zaplib API; see https://github.com/Zaplib/zaplib/issues/161
 image = { version = "0.24.1", default-features = false, features=["jpeg"] }
