--- a/zaplib/main/shader_compiler/Cargo.toml
+++ b/zaplib/main/shader_compiler/Cargo.toml
@@ -7,3 +7,7 @@ homepage = "https://github.com/Zaplib/zaplib"
 repository = "https://github.com/Zaplib/zaplib"
 readme = "README.md"
 description = "The shader compiler for Zaplib"
+
+[dependencies]
+lasso = { version = "0.6.0", features=["multi-threaded"] }
+once_cell = "1.10.0"
